--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
   <head>
     <title>platy11</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello, world!</h1>
+    <p>platy11</p>
+  </body>
 </html>
