--- a/scoutforpm/index.html
+++ b/scoutforpm/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang= dir='ltr'>
+<html lang='en' dir='ltr'>
   <head>
     <meta charset='utf-8'>
     <title>Vote [1] Scout</title>
+    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet"> 
     <link rel='stylesheet' href='index.css'>
   </head>
   <body>
