--- a/scoutforpm/index.html
+++ b/scoutforpm/index.html
@@ -16,17 +16,24 @@
       <h2>• The entire Australian population will be required to touch a little Whippet every day</h2>
       <h2>• Whippets will be provided at every road intersection to ensure the population has a daily dose of cuteness</h2>
       <h2>• Free Exclusive Cute Puppy-Eyed Scout-socks will be distributed nationwide! Limited to the first 120K Supporters*</h2>
-      <h4>Socks will be provided only when there are 120K supporters, otherwise we will not be able to distribute any cute puppy socks.</h4>
+      <h4>Socks will be provided only when there are 120K supporters, otherwise we will not be able to distribute any cute puppy socks. Additionally, you can go to the SUGAR CANDY LAND as shown on our logo.</h4>
 
       <br><br>
-      <h3>119, <span class='supporternumber'>100</span> supporters so far</h3>
+        <h3><span class='thousandsupporters'>119</span>, <span class='supporternumber'>100</span> supporters so far</h3>
       <h4>Do your bit for a cuter Australia. Click the button below.</h4><br>
       <a href='thanks.html'><button>Support Scout</button></a>
     </div>
     <script>
       document.addEventListener('DOMContentLoaded', ev => {
-        var supporters = 100;
+        var supporters = 100
+        var thousandSupporters = 119
         setInterval(() => {
+          if (supporters === 999) {
+            thousandSupporters++
+            supporters = 000
+            document.querySelector('span.thousandsupporters').innerText = thousandSupporters
+            document.querySelector('span.supporternumber').innerText = supporters
+          }
           supporters++
           document.querySelector('span.supporternumber').innerText = supporters
         }, 800)
